# FGP

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  first-gen-properties-mockup.jsx  package.json  pnpm-lock.yaml
.claude-flow/: session-state.json
.learnings/: ERRORS.md  LEARNINGS.md
.openai/: hosting.json
.superpowers/sdd/: task-1-brief.md  task-1-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-5b-report.md  task-5c-report.md  task-6a-report.md  task-6b-report.md  task-6c-report.md
apps/web/: middleware.ts  package-lock.json  package.json
apps/worker/: Dockerfile  config.py  db.py  main.py  pyproject.toml
apps/worker/.claude-flow/: session-state.json
apps/worker/routers/: feasibility.py  forms.py  parcel.py  scraper.py
apps/worker/services/: calculations.py  rate_limit.py  scrapers.py  spatial.py  tariffs.py
apps/worker/tests/: test_calculations.py  test_feasibility_endpoint.py  test_forms.py  test_scrapers.py  test_spatial.py  test_tariffs.py
docs/: Soshanguve Property Project Budget.xlsx  Soshanguve_Funding_Tracker_v2.xlsx
infra/: docker-compose.yml
memory/: MEMORY.md
scripts/: api-smoke.mjs  api-workflow-smoke.mjs  auth-role-smoke.mjs  capital-governance-migration-replay.sh  capital-governance-smoke.mjs  migrate-production.sh  production-preflight.mjs  security-regression-smoke.mjs  settings-controls-smoke.ts  signature-views-smoke.ts  ui-foundation-smoke.ts  workflow-cleanup.mjs  workflow-cleanup.test.mjs
supabase/: config.toml
tasks/: lessons.md  todo.md
(+117 files in other folders)
